# VisionQueue

./: .coverage  .coverage.Sreeprads-MacBook-Pro.local.16902.XTCBaPux  .coveragerc  .env.ci  .env.example  .gitignore  Dockerfile  Dockerfile.minio  LICENSE  Makefile  README.md  coverage.xml  docker-compose.yml  imagenet_classes.txt  main.py  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: tests.yml
api/: routes.py
core/: classifier.py
grafana/dashboards/: celery_metrics.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: datasource.yml
services/: celery_worker.py  storage.py  task_handler.py
tests/: conftest.py  test_classifier.py  test_main.py  test_routes.py  test_storage.py  test_tasks.py  test_utils.py
utils/: config.py  logger.py
